--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
