--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "firebase": "^11.0.2",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.1",
